[gd_scene load_steps=24 format=2]

[ext_resource path="res://ground.tres" type="Material" id=1]
[ext_resource path="res://structure1.tscn" type="PackedScene" id=2]
[ext_resource path="res://crane.tscn" type="PackedScene" id=3]
[ext_resource path="res://level1.gd" type="Script" id=4]
[ext_resource path="res://heightProgress.gd" type="Script" id=5]
[ext_resource path="res://sliderProgress.gd" type="Script" id=6]
[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=7]
[ext_resource path="res://progressBarBGStyle.tres" type="StyleBox" id=8]
[ext_resource path="res://progressBarFGStyle.tres" type="StyleBox" id=9]
[ext_resource path="res://addons/zylann.hterrain/hterrain_texture_set.gd" type="Script" id=10]
[ext_resource path="res://island/data.hterrain" type="Resource" id=11]
[ext_resource path="res://flat_circle.obj" type="ArrayMesh" id=12]
[ext_resource path="res://gray.tres" type="Material" id=13]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.0431373, 0.576471, 0.866667, 1 )
sky_horizon_color = Color( 0.501961, 0.780392, 1, 1 )
sky_curve = 0.0811124
ground_bottom_color = Color( 0.239216, 0.792157, 0.854902, 1 )
ground_horizon_color = Color( 0.0705882, 0.490196, 0.584314, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.74902, 0.988235, 1, 1 )
fog_enabled = true
fog_color = Color( 0.180392, 0.776471, 0.843137, 1 )
fog_depth_begin = 124.6
fog_depth_end = 169.9
fog_depth_curve = 0.965932
dof_blur_near_distance = 0.02

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 3.30634, 1.91579, 1.22299 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SphereShape" id=8]
radius = 41.2588

[sub_resource type="Resource" id=9]
script = ExtResource( 10 )
mode = 0
textures = [ [  ], [  ] ]

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0.239216, 0.792157, 0.854902, 0.623529 )

[node name="level1" type="Spatial"]
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.865003, 0.199099, -0.460575, 0.501767, -0.343229, 0.793992, 0, -0.917907, -0.396795, -0.0115964, 12.869, -6.35218 )
shadow_enabled = true
directional_shadow_split_1 = 0.182
directional_shadow_split_2 = 0.291

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="floor" type="StaticBody" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="floor"]
transform = Transform( 11.114, 0, 0, 0, 1, 0, 0, 0, 11.114, -0.180792, -0.963347, 0.0371075 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="floor/CollisionShape"]
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="crane" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.066864, -0.0668602, 0.0206947 )

[node name="target1" type="Spatial" parent="."]

[node name="wall" parent="target1" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.222222, 2.79153, 4.28568 )

[node name="area" type="Area" parent="target1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.34979, 3.40613, 4.20204 )

[node name="CollisionShape" type="CollisionShape" parent="target1/area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24196, 0.480626, 0 )
shape = SubResource( 5 )

[node name="platform" type="StaticBody" parent="target1"]
transform = Transform( 0.81161, 0, 0, 0, 1, 0, 0, 0, 0.386624, -2.41853, 0.73682, 4.23925 )

[node name="CollisionShape" type="CollisionShape" parent="target1/platform"]
transform = Transform( 3.104, 0, -1.87428e-08, 0, 1.88, 0, 5.04578e-08, 0, 1.153, -0.332, 0, 0.649 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="target1/platform/CollisionShape"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 13 )

[node name="target2" type="Spatial" parent="."]
transform = Transform( 0.437555, 0, -0.899191, 0, 1, 0, 0.899191, 0, 0.437555, 1.68542, 4.55469, -5.57601 )

[node name="wall" parent="target2" instance=ExtResource( 2 )]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 2.47, 0.236, 0.137 )

[node name="area" type="Area" parent="target2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07099, 0 )

[node name="CollisionShape" type="CollisionShape" parent="target2/area"]
shape = SubResource( 5 )

[node name="platform" type="StaticBody" parent="target2"]
transform = Transform( 0.830466, 0, 0, 0, 1, 0, 0, 0, 0.375954, 0.021, -2.862, 0.327 )

[node name="CollisionShape" type="CollisionShape" parent="target2/platform"]
transform = Transform( 2.974, 0, 0, 0, 2.917, 0, 0, 0, 1.178, 0, 0, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="target2/platform/CollisionShape"]
mesh = SubResource( 7 )
material/0 = ExtResource( 13 )

[node name="Panel" type="Panel" parent="."]
margin_left = 16.8242
margin_top = 15.5421
margin_right = 285.824
margin_bottom = 134.542
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreHBox" type="HBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/ScoreHBox"]
margin_right = 91.0
margin_bottom = 100.0

[node name="scoreLabel" type="Label" parent="Panel/ScoreHBox/VBoxContainer2"]
margin_right = 91.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.341176, 0.701961, 1, 1 )
text = "Score"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlsKeys" type="Label" parent="Panel/ScoreHBox/VBoxContainer2"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 100.0
text = "W/S
A/E
Mouse Left
Mouse Right
Esc"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScoreHBox"]
margin_left = 95.0
margin_right = 240.0
margin_bottom = 100.0

[node name="score" type="Label" parent="Panel/ScoreHBox/VBoxContainer"]
margin_right = 145.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.341176, 0.701961, 1, 1 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlsActions" type="Label" parent="Panel/ScoreHBox/VBoxContainer"]
margin_top = 18.0
margin_right = 145.0
margin_bottom = 100.0
text = "Forward/Backward
Left/Right
Lower Ball
Raise Ball
Quit"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -22.0
margin_right = 78.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win_label" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -15.5
margin_right = 69.0
margin_bottom = 15.5
text = "You Win!
Press Enter to Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 301.0
margin_top = 16.0
margin_right = 668.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heightProgress" type="ProgressBar" parent="Panel3"]
margin_left = 85.0
margin_top = 9.5421
margin_right = 356.0
margin_bottom = 23.5421
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
max_value = 14.0
value = 7.0
percent_visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sliderProgress" type="ProgressBar" parent="Panel3"]
margin_left = 85.0
margin_top = 25.5421
margin_right = 356.0
margin_bottom = 39.5421
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
min_value = 1.5
max_value = 14.5
value = 14.5
percent_visible = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="height" type="Label" parent="Panel3"]
margin_left = 10.5
margin_top = 9.5421
margin_right = 50.5
margin_bottom = 23.5421
text = "Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="Label" parent="Panel3"]
margin_left = 10.5
margin_top = 25.5421
margin_right = 52.5
margin_bottom = 39.5421
text = "Slider Pos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in_bounds_area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.48857, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="in_bounds_area"]
shape = SubResource( 8 )

[node name="HTerrain" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -125, 0, -125 )
script = ExtResource( 7 )
ambient_wind = 0.0
lod_scale = 2.0
map_scale = Vector3( 1, 1, 1 )
_terrain_data = ExtResource( 11 )
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource( 9 )
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = false
shader_params/u_tile_reduction = Plane( 0, 0, 0, 0 )

[node name="flat_circle" type="MeshInstance" parent="."]
transform = Transform( 372.218, 0, 0, 0, 372.218, 0, 0, 0, 373.236, 0, -6.2084, 0 )
mesh = ExtResource( 12 )
material/0 = SubResource( 10 )
[connection signal="body_exited" from="in_bounds_area" to="." method="_on_in_bounds_area_body_exited"]
